--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,21 @@
 body{font-family: Helvetica;
-     color: white;
      text-align: center;
    }
 
 .banner{
         font-size: 70px;
         font-weight: bold;
+        color: white;
         }
 .header{background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");}
 
 .content{font-size: 18px;
          color: white;}
+
+  h2{font-size: 32px;
+     font-weight: bold;
+      }
+
+h3{font-size: 23px;
+    font-weight: bold;
+    }
