--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,3 +19,11 @@ body{font-family: Helvetica;
 h3{font-size: 23px;
     font-weight: bold;
     }
+
+.design{color: white;
+        background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");}
+
+.footer{font-size: 11px;
+        color: white;
+        background-color: dimgray;
+        text-align: left;}
